# teeny-rpc

./: .gitignore  .mdl_style.rb  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  formatting.yml  release.yml
examples/pc/: rust-toolchain.toml
examples/pc/src/: main.rs
examples/pi-pico/: Cargo.toml  rust-toolchain.toml
examples/pi-pico/src/: main.rs
src/: client.rs  lib.rs  server.rs  test.rs
src/transport/: embedded.rs  tokio_channels.rs
