[package]
name = "teeny-rpc"
version = "0.1.1"
license = "MIT"
edition = "2021"
homepage = "https://github.com/DanNixon/teeny-rpc"
repository = "https://github.com/DanNixon/teeny-rpc"
readme = "README.md"
description = "An extremely minimal Rust RPC library that supports both std and no_std clients and servers."
authors = ["Dan Nixon <dan@dan-nixon.com>"]

[features]
default = ["std"]

std = [
  "postcard/use-std",
  "serde/std",
  "thiserror/std",
  "dep:log",
  "dep:tokio",
  "dep:tokio-serial",
]

no-std = [
  "dep:defmt",
  "dep:embassy-time",
  "dep:embedded-io-async",
  "dep:heapless",
]

[dependencies]
postcard = { version = "1.1.1", default-features = false }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false }

# no-std dependencies
defmt = { version = "1.0.1", optional = true }
embassy-time = { version = "0.5.0", optional = true }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"], optional = true }
heapless = { version = "0.8.0", features = ["defmt-03", "serde"], optional = true }

# std dependencies
log = { version = "0.4.26", optional = true }
tokio = { version = "1.44.1", features = ["sync", "rt", "macros", "time", "io-util"], optional = true }
tokio-serial = { version = "5.4.5", optional = true }

[dev-dependencies]
ctor = "0.4.3"
env_logger = "0.11.7"

[lints.rust]
unused_crate_dependencies = "deny"
