[package]
name = "teeny-rpc-demo-pi-pico"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
serde = { version = "1.0.219", default-features = false }
static_cell = "2.1.0"
teeny-rpc = { path = "../../", default-features = false, features = ["no-std"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[lints.rust]
unused_crate_dependencies = "deny"
